--- a/theme.css
+++ b/theme.css
@@ -1,4 +1,4 @@
-/*! theme.css v1.0.6 | MIT License | https://github.com/diogofilipee/brackets-macOS-Xcode-Dusk */
+/*! theme.css v1.0.8 | MIT License | https://github.com/diogofilipee/brackets-macOS-Xcode-Dusk */
 
 .pane-header {
     background-color: #fff;
@@ -31,7 +31,7 @@
 .CodeMirror {
     background-color: #282b35;
     color: #fff;
-    font-family: Menlo, 'MS Gothic', monospace;
+    font-family: Menlo, Consolas, "Liberation Mono", Courier, monospace;
     font-size: 11px !important;
     line-height: normal
 }
@@ -80,7 +80,203 @@
 .CodeMirror-searching.searching-current-match {
     background-color: #b09f4a;
     color: #fff !important
-    
+}
+
+.CodeMirror-linewidget .inline-widget {
+    background-color: #282b35;
+    border-bottom: 1px solid #52545b;
+    border-top: 1px solid #52545b
+}
+
+.CodeMirror-linewidget .inline-widget .shadow {
+    display: none
+}
+
+.CodeMirror-linewidget .inline-widget .close {
+    color: #fff;
+    line-height: 25px
+}
+
+.CodeMirror-linewidget .inline-widget .related-container {
+    background-color: #282b35;
+    border-left: 1px solid #52545b;
+    font-family: "Meiryo UI", "Segoe UI", Helvetica, Arial, sans-serif
+}
+
+.CodeMirror-linewidget .inline-widget .related-container .related li {
+    color: #fff
+}
+
+.CodeMirror-linewidget .inline-widget .related-container .selection {
+    background-color: #52545b;
+    height: 23px !important
+}
+
+.CodeMirror-linewidget .inline-widget .related-container .selection:before {
+    border-color: transparent !important
+}
+
+.CodeMirror-linewidget .inline-widget .related-container .related ul {
+    color: ;
+    padding: 11px 0 10px 5px
+}
+
+.CodeMirror-linewidget .inline-widget .related-container .related li.section-header .disclosure-triangle {
+    background-position: 6px 5px
+}
+
+.CodeMirror-linewidget .inline-widget .inline-text-editor .inline-editor-header .filename {
+    color: #fff;
+    cursor: pointer;
+    font-family: "Meiryo UI", "Segoe UI", Helvetica, Arial, sans-serif;
+    font-size: 12px
+}
+
+.CodeMirror-linewidget .inline-widget .inline-text-editor .inline-editor-header .filename .dirty-indicator {
+    line-height: 25px
+}
+
+.CodeMirror-linewidget .inline-widget .inline-text-editor .btn {
+    background-color: #282b35;
+    border: 1px solid #52545b;
+    box-shadow: none;
+    color: #fff;
+    cursor: pointer;
+    font-family: "Meiryo UI", "Segoe UI", Helvetica, Arial, sans-serif;
+    font-size: 11px
+}
+
+.CodeMirror-linewidget .inline-widget .inline-text-editor .btn:hover {
+    background-color: #24262f
+}
+
+.CodeMirror-linewidget .inline-widget .inline-text-editor .btn:active {
+    background-color: #1d1e26
+}
+
+.CodeMirror-linewidget .inline-widget .inline-text-editor .btn.btn-mini {
+    padding: 4px 6px 3px 6px
+}
+
+.CodeMirror-linewidget .inline-widget .inline-text-editor .btn.btn-mini.btn-dropdown {
+    padding-right: 20px !important
+}
+
+.CodeMirror-linewidget .inline-widget .inline-text-editor .btn.btn-dropdown::after {
+    border-top: 5px solid #52545b
+}
+
+.CodeMirror-linewidget .inline-widget .inline-text-editor .btn.btn-dropdown.btn-mini::after {
+    top: 8px
+}
+
+.CodeMirror-linewidget .inline-widget .inline-editor-message {
+    color: #fff;
+    font-family: "Meiryo UI", "Segoe UI", Helvetica, Arial, sans-serif;
+    font-size: 11px;
+    height: auto;
+    padding: 10px 0px 15px 50px
+}
+
+.CodeMirror-linewidget .inline-widget .CodeMirror-scroll .CodeMirror-gutters {
+    border: none
+}
+
+.CodeMirror-linewidget .inline-widget .CodeMirror-scroll .CodeMirror-linenumbers {
+    background-color: #282b35
+}
+
+.CodeMirror-linewidget .inline-widget .CodeMirror-scroll .CodeMirror-foldgutter {
+    background-color: #282b35
+}
+
+.CodeMirror-linewidget .inline-widget .color-editor section .gradient-overlay {
+    box-shadow: 0 -1px 0 rgba(0, 0, 0, .12), 0 1px 0 #3f4149;
+}
+
+.CodeMirror-linewidget .inline-widget .color-editor section .color-selection-field .selector-base {
+    height: 11.5px;
+    width: 11.3px
+}
+
+.CodeMirror-linewidget .inline-widget .color-editor section .color-selection-field .selector:hover,
+.CodeMirror-linewidget .inline-widget .color-editor section .slider .selector:hover{
+    cursor: -webkit-grab
+}
+
+.CodeMirror-linewidget .inline-widget .color-editor section .color-selection-field .selector:active,
+.CodeMirror-linewidget .inline-widget .color-editor section .slider .selector:active, {
+    cursor: -webkit-grabbing
+}
+
+.CodeMirror-linewidget .inline-widget .color-editor section footer .color-value {
+    background-color: #3f4149;
+    border-color: #52545b;
+    box-shadow: none;
+    color: #fff;
+    font-family: "Meiryo UI", "Segoe UI", Helvetica, Arial, sans-serif;
+    width: 111px
+}
+
+.CodeMirror-linewidget .inline-widget .color-editor .button-bar li:first-child {
+    margin-left: 0
+}
+
+.CodeMirror-linewidget .inline-widget .color-editor .button-bar a {
+    background-color: #3f4149;
+    border: 1px solid #52545b;
+    border-right: 1px solid transparent;
+    box-shadow: none;
+    color: #fff;
+    cursor: pointer;
+    font-family: "Meiryo UI", "Segoe UI", Helvetica, Arial, sans-serif;
+    text-shadow: none
+}
+
+.CodeMirror-linewidget .inline-widget .color-editor .button-bar li {
+    margin-left: -5px
+}
+
+.CodeMirror-linewidget .inline-widget .color-editor .button-bar li.selected a {
+    background-color: rgba(224, 240, 250, 0.15);
+    color: #0083e8
+}
+
+.CodeMirror-linewidget .inline-widget .color-editor .button-bar a:focus {
+    border-right: 1px solid transparent !important;
+}
+
+.CodeMirror-linewidget .inline-widget .color-editor .button-bar li:last-child a:focus {
+    border-right: 1px solid #52545b !important;
+}
+
+.CodeMirror-linewidget .inline-widget .color-editor .button-bar li:last-child a {
+    border: 1px solid #52545b
+}
+
+.CodeMirror-linewidget .inline-widget .color-editor aside header {
+    margin-bottom: 7px
+}
+
+.CodeMirror-linewidget .inline-widget .color-editor aside header .large-swatch {
+    box-shadow: inset 0 1px 0 #3f4149;
+}
+
+.CodeMirror-linewidget .inline-widget .color-editor aside ul.swatches li .value {
+    font-family: "Meiryo UI", "Segoe UI", Helvetica, Arial, sans-serif
+}
+
+.CodeMirror-linewidget .inline-widget .color-editor aside ul.swatches li {
+    cursor: pointer
+}
+
+.CodeMirror-linewidget .inline-widget .color-editor aside ul.swatches li:focus {
+    box-shadow: none;
+    color: #0083e8
+}
+
+.CodeMirror-linewidget .inline-widget .color-editor aside ul.swatches li .swatch-bg .swatch {
+    box-shadow: 0 -1px 0 rgba(0, 0, 0, .12), 0 1px 0 #3f4149;
 }
 
 /* html, xml */
