--- a/theme.css
+++ b/theme.css
@@ -1,4 +1,4 @@
-/*! theme.css v1.0.9 | MIT License | https://github.com/diogofilipee/brackets-macOS-Xcode-Dusk */
+/*! theme.css v1.1.0 | MIT License | https://github.com/diogofilipee/brackets-macOS-Xcode-Dusk */
 
 .pane-header {
     background-color: #fff;
@@ -104,7 +104,8 @@
 }
 
 .CodeMirror-linewidget .inline-widget .related-container .related li {
-    color: #fff
+    color: #fff;
+    cursor: pointer
 }
 
 .CodeMirror-linewidget .inline-widget .related-container .selection {
@@ -188,6 +189,10 @@
 
 .CodeMirror-linewidget .inline-widget .CodeMirror-scroll .CodeMirror-foldgutter {
     background-color: #282b35
+}
+
+.CodeMirror-linewidget .inline-widget .color-editor section .slider {
+    box-shadow: 0 1px 0 #3f4149, inset 0 1px 0 rgba(0, 0, 0, 0.2)
 }
 
 .CodeMirror-linewidget .inline-widget .color-editor section .gradient-overlay {
@@ -276,7 +281,7 @@
 }
 
 .CodeMirror-linewidget .inline-widget .color-editor aside ul.swatches li .swatch-bg .swatch {
-    box-shadow: 0 -1px 0 rgba(0, 0, 0, .12), 0 1px 0 #3f4149;
+    box-shadow: 0 -1px 0 rgba(0, 0, 0, .12), 0 1px 0 #3f4149
 }
 
 /* html, xml */
@@ -286,7 +291,7 @@
 }
 
 .cm-m-xml.cm-keyword {
-    color: inherit;
+    color: inherit
 }
 
 .cm-m-xml.cm-atom {
